fix: JDK22+のGPUプローブ子JVMにALL-UNNAMEDを付与、javafx:runの無効なjavafx向けJVMオプションを整理